Revision history for {{$dist->name}}

{{$NEXT}}
  - the return value of namespaces_clean() and all_namespaces_clean() is now
    consistent with the result of the test(s).

0.10      2014-05-12 04:30:17Z (TRIAL RELEASE)
  - fix test diagnostics in the success case
  - fix use of a new Scalar::Util export in tests

0.09      2014-05-07 05:06:58Z (TRIAL RELEASE)
  - increased version for optional Role::Tiny prereq, to get the needed
    is_role interface
  - now ignoring 'import', 'unimport' subs; also handle users of
    Moose::Exporter without erroring
  - now ignoring overloaded methods
  - now also properly handle classes using Class::MOP directly

0.08      2014-03-09 01:08:34Z
  - fixed method identification in Moose and Mouse roles

0.07      2014-03-02 06:55:41Z
  - remove test prereqs that are meant to be optional (added in v0.06)
  - fix handling of subs composed from a role (Moose::Role, Moo::Role,
    Mouse::Role, and Role::Tiny), broken in v0.06

0.06      2014-03-01 19:14:39Z
  - lots more tests
  - in failing tests, identify the source of the uncleaned sub(s)
  - remove the dependency on Class::MOP by inspecting the package stash
    directly
 - line numbers in shipped code are now almost the same (within 3) as the
   repository source, for easier debugging

0.05      2013-09-25 03:34:13Z
  - re-release with fixed compile test

0.04      2013-09-14 17:32:26Z
  - remove use of deprecated Class::MOP::load_class

0.03   2010-05-07 22:29:00 +0200
  - Stop using the deprecated get_method_map method.

0.02   2009-05-28 06:05:26 +0200
  - Declare dependency on Test::Tester.

0.01   2009-05-16 18:32:11 +0200
  - Initial release.