@@ -5,12 +5,12 @@ use Class::MOP::Class;
 my $meta = Class::MOP::Class->create('ClassMOPClean');
 
 package ClassMOPClean;
-use Scalar::Util 'refaddr';
+use File::Spec::Functions 'catdir';
 use namespace::clean;
 
 sub stuff {}
 
 use constant CAN => [ qw(stuff meta) ];
-use constant CANT => [ qw(refaddr weaken reftype) ];
+use constant CANT => [ qw(catdir catfile devnull) ];
 
 1;
