@@ -3,12 +3,12 @@ use warnings;
 package ClassMOPDirty;
 
 use metaclass;
-use Scalar::Util 'refaddr';
+use File::Spec::Functions 'catdir';
 
 sub stuff {}
 
-use constant CAN => [ qw(stuff refaddr meta) ];
+use constant CAN => [ qw(stuff catdir meta) ];
 use constant CANT => [ ];
-use constant DIRTY => [ qw(refaddr) ];
+use constant DIRTY => [ qw(catdir) ];
 
 1;
