@@ -5,12 +5,12 @@ package Composer;
 use parent 'Clean';
 use Role::Tiny 'with';
 with 'Role';
-use Scalar::Util 'weaken';
+use File::Spec::Functions 'catfile';
 use namespace::clean;
 
 sub child_stuff {}
 
 use constant CAN => [ qw(method role_stuff child_stuff) ];
-use constant CANT => [ qw(refaddr reftype weaken with) ];
+use constant CANT => [ qw(catdir devnull catfile with) ];
 
 1;
