@@ -5,12 +5,12 @@ package MooseyComposer;
 use Moose;
 extends 'MooseyClean';
 with 'MooseyRole';
-use Scalar::Util 'weaken';
+use File::Spec::Functions 'catfile';
 use namespace::clean;
 
 sub child_stuff {}
 
 use constant CAN => [ qw(stuff role_stuff child_stuff meta) ];
-use constant CANT => [ qw(refaddr reftype weaken with) ];
+use constant CANT => [ qw(catdir devnull catfile with) ];
 
 1;
