@@ -3,12 +3,12 @@ use warnings;
 package MooseyDirty;
 
 use Moose;
-use Scalar::Util 'refaddr';
+use File::Spec::Functions 'catdir';
 
 sub stuff {}
 
-use constant CAN => [ qw(refaddr stuff has with meta) ];
+use constant CAN => [ qw(catdir stuff has with meta) ];
 use constant CANT => [ ];
-use constant DIRTY => [ qw(refaddr has with) ];
+use constant DIRTY => [ qw(catdir has with) ];
 
 1;
