@@ -4,7 +4,7 @@ package MooseyParameterizedRole;
 
 use MooseX::Role::Parameterized;
 with 'MooseyRole';
-use Scalar::Util 'reftype';
+use File::Spec::Functions 'devnull';
 use namespace::clean;
 
 parameter foo => ( is => 'ro', isa => 'Str' );
@@ -16,6 +16,6 @@ role {
 sub parameterized_role_stuff {}
 
 use constant CAN => [ qw(role_stuff) ];  # TODO: meta
-use constant CANT => [ qw(reftype parameter role with) ];
+use constant CANT => [ qw(devnull parameter role with) ];
 
 1;
