@@ -5,12 +5,12 @@ package MooyComposer;
 use Moo;
 extends 'MooyClean';
 with 'MooyRole';
-use Scalar::Util 'weaken';
+use File::Spec::Functions 'catfile';
 use namespace::clean;
 
 sub child_stuff {}
 
 use constant CAN => [ qw(stuff role_stuff meta) ];
-use constant CANT => [ qw(refaddr reftype weaken with) ];
+use constant CANT => [ qw(catdir devnull catfile with) ];
 
 1;
