@@ -3,12 +3,12 @@ use warnings;
 package MouseyClean;
 
 use Mouse;
-use Scalar::Util 'refaddr';
+use File::Spec::Functions 'catdir';
 use namespace::clean;
 
 sub stuff {}
 
 use constant CAN => [ qw(stuff meta) ];
-use constant CANT => [ qw(refaddr with) ];
+use constant CANT => [ qw(catdir with) ];
 
 1;
