@@ -3,12 +3,12 @@ use warnings;
 package Role;
 
 use Role::Tiny 1.003000;    # for is_role, used by our heuristic
-use Scalar::Util 'reftype';
+use File::Spec::Functions 'devnull';
 use namespace::clean;
 
 sub role_stuff {}
 
 use constant CAN => [ qw(role_stuff) ];
-use constant CANT => [ qw(reftype with) ];
+use constant CANT => [ qw(devnull with) ];
 
 1;
