@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - the return value of namespaces_clean() and all_namespaces_clean() is now
     consistent with the result of the test(s).
+  - fixed tests to expose an issue with Mouse classes, and documented this
+    (now) known issue
 
 0.10      2014-05-12 04:30:17Z (TRIAL RELEASE)
   - fix test diagnostics in the success case
